# router/register/content.go
@@ -7,7 +7,7 @@ import (
 
 //主要查看类容
 func ContentRouteRegister(app *iris.Application) {
-	contentParty := app.Party("/content")
+	contentParty := app.Party("/v1/content")
 
 	//获取主题对应的内容
 	contentParty.Get("/theme",v1.GetContent)
@@ -17,4 +17,10 @@ func ContentRouteRegister(app *iris.Application) {
 
 	//更新内容
 	contentParty.Put("/theme",v1.UpdateContent)
+
+	//上传文件中引用的图片或视频
+	contentParty.Post("/uploadFile",v1.UploadFile)
+
+	//获取应用的图片或视频
+	contentParty.Get("/getReferenceFile",v1.GetReferenceFile)
 }
